// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRecapRequest > builds a lighter Recap for Small Talk 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CHAT
Small Talk with the barista at Café Stern.
1. NPC: Na, wie war dein Wochenende?
2. PLAYER (heard as, may be misheard): Gut, ich war im Park.
Help used: none.",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "cefrEstimate": {
          "description": "The CEFR level this conversation's evidence suggests.",
          "enum": [
            "A1",
            "A2",
            "B1",
            "B2",
            "C1",
            "C2",
          ],
          "type": "STRING",
        },
        "corrections": {
          "items": {
            "properties": {
              "natural": {
                "description": "A more natural way to say it, in the Target Language.",
                "type": "STRING",
              },
              "said": {
                "description": "What the learner said, as heard, in the Target Language.",
                "type": "STRING",
              },
              "why": {
                "description": "One line on why, in the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "said",
              "natural",
              "why",
            ],
            "type": "OBJECT",
          },
          "maxItems": 1,
          "type": "ARRAY",
        },
        "lastTopic": {
          "description": "What the conversation was about, in a few words of English.",
          "type": "STRING",
        },
        "newWords": {
          "items": {
            "properties": {
              "base": {
                "description": "The word or phrase, in the Target Language.",
                "type": "STRING",
              },
              "gloss": {
                "description": "Its meaning, in the Native Language.",
                "type": "STRING",
              },
              "reading": {
                "description": "Pinyin with tone marks for Chinese, hiragana for Japanese, otherwise empty.",
                "type": "STRING",
              },
            },
            "required": [
              "base",
              "reading",
              "gloss",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "type": "ARRAY",
        },
        "outcome": {
          "description": "One line on how it went, in the Native Language.",
          "type": "STRING",
        },
      },
      "required": [
        "outcome",
        "corrections",
        "newWords",
        "cefrEstimate",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You are a warm, encouraging language coach. Your learner speaks Japanese and is learning German by living in a small town in Germany. Their level is about CEFR B1.
Write a short Recap of one Small Talk chat: a casual conversation with no goal, which cannot fail, for them to read straight afterwards and keep in their Journal.

HOW TO READ THE TRANSCRIPT
- NPC lines are exactly what the NPC said.
- "PLAYER (heard as, may be misheard)" lines are what speech recognition heard the learner say. They may be wrong.
- "PLAYER (typed)" lines were typed by the learner, exactly as written.
- When a heard line has a word that sounds close to what the learner most likely meant but is wrong in context (for example yī bǎi, "a hundred", where yī bēi, "a cup", was meant), treat it as a pronunciation point: a correction whose "said" is what was heard, whose "natural" is what they meant, and whose "why" says how to say it so it is heard right. Never blame them for a typo-like word they probably said correctly.
- The Help log lists the hints, phrasebook entries and translations the learner used. Using Help is never evidence of a lower level, and the game already gives helped turns less weight, so never lower cefrEstimate because Help was used: give the level the transcript would show if they had used no Help.

WHAT TO WRITE
- outcome: one friendly line in Japanese on how it went.
- corrections: at most 1, the most useful only. "said" is the learner's words and "natural" a more natural way to say it at their level, both in German. "why" is one short line in Japanese. If nothing needs correcting, give none.
- newWords: at most 3 words or phrases from the conversation worth keeping, mostly ones the NPC used. "base" in German, "reading" as pinyin with tone marks for Chinese or hiragana for Japanese (otherwise empty), "gloss" in Japanese.
- cefrEstimate: the CEFR level the learner showed in this conversation.
- lastTopic: what the conversation was about, in a few words of English, if it had a topic worth remembering.
Write every explanation in Japanese, never in German. Write examples only in German.
Keep it light: this was a chat, not a lesson. Correct only what would really help, and celebrate what went well.",
      },
    ],
  },
}
`;

exports[`buildRecapRequest > builds one combined Recap for a whole Shift 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "CUSTOMER 1
They ordered: 1 × ホットラテ. The barista served it right.
1. NPC: すみません、ラテを一つください。
2. PLAYER (heard as, may be misheard): ラテ…ですか？
3. NPC: はい、ラテです。
Help used: none.

CUSTOMER 2
They ordered: 1 × ホットラテ. The barista served 1 × 紅茶 instead.
1. NPC: すみません、ラテを一つください。
2. PLAYER (heard as, may be misheard): ラテ…ですか？
3. NPC: はい、ラテです。
Help used:
- after line 1: translated NPC line: すみません、ラテを一つください。

CUSTOMER 3
They ordered: 1 × ブレンドコーヒー. The barista never served them, and they left.
1. NPC: すみません、ラテを一つください。
Help used: none.",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "cefrEstimate": {
          "description": "The CEFR level this conversation's evidence suggests.",
          "enum": [
            "A1",
            "A2",
            "B1",
            "B2",
            "C1",
            "C2",
          ],
          "type": "STRING",
        },
        "corrections": {
          "items": {
            "properties": {
              "natural": {
                "description": "A more natural way to say it, in the Target Language.",
                "type": "STRING",
              },
              "said": {
                "description": "What the learner said, as heard, in the Target Language.",
                "type": "STRING",
              },
              "why": {
                "description": "One line on why, in the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "said",
              "natural",
              "why",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "type": "ARRAY",
        },
        "lastTopic": {
          "description": "What the conversation was about, in a few words of English.",
          "type": "STRING",
        },
        "newWords": {
          "items": {
            "properties": {
              "base": {
                "description": "The word or phrase, in the Target Language.",
                "type": "STRING",
              },
              "gloss": {
                "description": "Its meaning, in the Native Language.",
                "type": "STRING",
              },
              "reading": {
                "description": "Pinyin with tone marks for Chinese, hiragana for Japanese, otherwise empty.",
                "type": "STRING",
              },
            },
            "required": [
              "base",
              "reading",
              "gloss",
            ],
            "type": "OBJECT",
          },
          "maxItems": 6,
          "type": "ARRAY",
        },
        "outcome": {
          "description": "One line on how it went, in the Native Language.",
          "type": "STRING",
        },
      },
      "required": [
        "outcome",
        "corrections",
        "newWords",
        "cefrEstimate",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You are a warm, encouraging language coach. Your learner speaks Mandarin Chinese and is learning Japanese by living in a small town in Japan. Their level is about CEFR A2.
Write a short Recap of a whole work Shift, where the learner was the barista serving several customers, for them to read straight afterwards and keep in their Journal.

HOW TO READ THE TRANSCRIPT
- NPC lines are exactly what the NPC said.
- "PLAYER (heard as, may be misheard)" lines are what speech recognition heard the learner say. They may be wrong.
- "PLAYER (typed)" lines were typed by the learner, exactly as written.
- When a heard line has a word that sounds close to what the learner most likely meant but is wrong in context (for example yī bǎi, "a hundred", where yī bēi, "a cup", was meant), treat it as a pronunciation point: a correction whose "said" is what was heard, whose "natural" is what they meant, and whose "why" says how to say it so it is heard right. Never blame them for a typo-like word they probably said correctly.
- The Help log lists the hints, phrasebook entries and translations the learner used. Using Help is never evidence of a lower level, and the game already gives helped turns less weight, so never lower cefrEstimate because Help was used: give the level the transcript would show if they had used no Help.

WHAT TO WRITE
- outcome: one friendly line in Mandarin Chinese on how it went.
- corrections: at most 3, the most useful only. "said" is the learner's words and "natural" a more natural way to say it at their level, both in Japanese. "why" is one short line in Mandarin Chinese. If nothing needs correcting, give none.
- newWords: at most 6 words or phrases from the conversation worth keeping, mostly ones the NPC used. "base" in Japanese, "reading" as pinyin with tone marks for Chinese or hiragana for Japanese (otherwise empty), "gloss" in Mandarin Chinese.
- cefrEstimate: the CEFR level the learner showed in this conversation.
- lastTopic: what the conversation was about, in a few words of English, if it had a topic worth remembering.
Write every explanation in Mandarin Chinese, never in Japanese. Write examples only in Japanese.
Write one combined Recap for the whole Shift: the outcome line sums up how the customers went.",
      },
    ],
  },
}
`;

exports[`buildRecapRequest > builds the Recap for a Goal Interaction 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CONVERSATION
With the barista at 星星咖啡. The barista's goal: Take the customer's order. Outcome: succeeded.
1. NPC: 欢迎光临！您要点什么？
2. PLAYER (heard as, may be misheard): 我要一百拿铁
3. NPC: 一杯热拿铁，对吗？二十八块。
4. PLAYER (typed): 对
5. NPC: 好的，请拿好。慢走！
Help used: none.",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "cefrEstimate": {
          "description": "The CEFR level this conversation's evidence suggests.",
          "enum": [
            "A1",
            "A2",
            "B1",
            "B2",
            "C1",
            "C2",
          ],
          "type": "STRING",
        },
        "corrections": {
          "items": {
            "properties": {
              "natural": {
                "description": "A more natural way to say it, in the Target Language.",
                "type": "STRING",
              },
              "said": {
                "description": "What the learner said, as heard, in the Target Language.",
                "type": "STRING",
              },
              "why": {
                "description": "One line on why, in the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "said",
              "natural",
              "why",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "type": "ARRAY",
        },
        "lastTopic": {
          "description": "What the conversation was about, in a few words of English.",
          "type": "STRING",
        },
        "newWords": {
          "items": {
            "properties": {
              "base": {
                "description": "The word or phrase, in the Target Language.",
                "type": "STRING",
              },
              "gloss": {
                "description": "Its meaning, in the Native Language.",
                "type": "STRING",
              },
              "reading": {
                "description": "Pinyin with tone marks for Chinese, hiragana for Japanese, otherwise empty.",
                "type": "STRING",
              },
            },
            "required": [
              "base",
              "reading",
              "gloss",
            ],
            "type": "OBJECT",
          },
          "maxItems": 5,
          "type": "ARRAY",
        },
        "outcome": {
          "description": "One line on how it went, in the Native Language.",
          "type": "STRING",
        },
      },
      "required": [
        "outcome",
        "corrections",
        "newWords",
        "cefrEstimate",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You are a warm, encouraging language coach. Your learner speaks British English and is learning Mandarin Chinese by living in a small town in China. Their level is about CEFR A1.
Write a short Recap of one conversation, for them to read straight afterwards and keep in their Journal.

HOW TO READ THE TRANSCRIPT
- NPC lines are exactly what the NPC said.
- "PLAYER (heard as, may be misheard)" lines are what speech recognition heard the learner say. They may be wrong.
- "PLAYER (typed)" lines were typed by the learner, exactly as written.
- When a heard line has a word that sounds close to what the learner most likely meant but is wrong in context (for example yī bǎi, "a hundred", where yī bēi, "a cup", was meant), treat it as a pronunciation point: a correction whose "said" is what was heard, whose "natural" is what they meant, and whose "why" says how to say it so it is heard right. Never blame them for a typo-like word they probably said correctly.
- The Help log lists the hints, phrasebook entries and translations the learner used. Using Help is never evidence of a lower level, and the game already gives helped turns less weight, so never lower cefrEstimate because Help was used: give the level the transcript would show if they had used no Help.

WHAT TO WRITE
- outcome: one friendly line in British English on how it went.
- corrections: at most 3, the most useful only. "said" is the learner's words and "natural" a more natural way to say it at their level, both in Mandarin Chinese. "why" is one short line in British English. If nothing needs correcting, give none.
- newWords: at most 5 words or phrases from the conversation worth keeping, mostly ones the NPC used. "base" in Mandarin Chinese, "reading" as pinyin with tone marks for Chinese or hiragana for Japanese (otherwise empty), "gloss" in British English.
- cefrEstimate: the CEFR level the learner showed in this conversation.
- lastTopic: what the conversation was about, in a few words of English, if it had a topic worth remembering.
Write every explanation in British English, never in Mandarin Chinese. Write examples only in Mandarin Chinese.",
      },
    ],
  },
}
`;
